--- a/package.json
+++ b/package.json
@@ -19,12 +19,20 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
+    "@uiw/react-codemirror": "^4.23.2",
+    "ace-builds": "^1.36.2",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "codemirror": "^6.0.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.9",
     "react": "^18",
+    "react-ace": "^12.0.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
